{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 49,
  "lineage": "e4e0f2c1-37e9-fc8d-7630-0c4c697ced83",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08b138b7cf65145b1",
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:instance/i-0fa33cb5f9b5a4a92",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa33cb5f9b5a4a92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0546f0b4d87af2f85"
              }
            ],
            "primary_network_interface_id": "eni-0546f0b4d87af2f85",
            "private_dns": "ip-10-0-1-126.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-18-140-1-120.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.1.120",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5fcdaea8cfcef14",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a792997ad360787e",
            "tags": {
              "Name": "demo-instance"
            },
            "tags_all": {
              "Name": "demo-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f93c105844563af6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535002865174",
            "id": "i-0fa33cb5f9b5a4a92",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.compute.aws_key_pair.demo_key_pair",
            "module.compute.tls_private_key.demo_key",
            "module.networking.aws_security_group.demo-sg",
            "module.networking.aws_subnet.main-demo-subnet",
            "module.networking.aws_vpc.demo-vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:internet-gateway/igw-0b83085ea87b69b68",
            "id": "igw-0b83085ea87b69b68",
            "owner_id": "535002865174",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "demo igw"
            },
            "tags_all": {
              "Name": "demo igw"
            },
            "vpc_id": "vpc-0c539d0abf40fe20b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:route-table/rtb-021c1a885f7ede33f",
            "id": "rtb-021c1a885f7ede33f",
            "owner_id": "535002865174",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b83085ea87b69b68",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c539d0abf40fe20b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535002865174",
            "id": "rtb-021c1a885f7ede33f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.demo-igw",
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038a94c352963e7c7",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-021c1a885f7ede33f",
            "subnet_id": "subnet-0a792997ad360787e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.demo-igw",
            "module.networking.aws_route_table.demo-route-table",
            "module.networking.aws_subnet.main-demo-subnet",
            "module.networking.aws_vpc.demo-vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:security-group/sg-0f93c105844563af6",
            "description": "allow internet \u0026 ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow instance to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f93c105844563af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh to instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "535002865174",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c539d0abf40fe20b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535002865174",
            "id": "sg-0f93c105844563af6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow instance to internet",
            "from_port": 0,
            "id": "sgrule-1971849748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f93c105844563af6",
            "security_group_rule_id": "sgr-04877c541ea58f892",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.demo-sg",
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow http from web",
            "from_port": 80,
            "id": "sgrule-1687412142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f93c105844563af6",
            "security_group_rule_id": "sgr-08da100da40d85adf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.demo-sg",
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh to instance",
            "from_port": 22,
            "id": "sgrule-3524886555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f93c105844563af6",
            "security_group_rule_id": "sgr-044ab6dfa6af5a90c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.demo-sg",
            "module.networking.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:subnet/subnet-0a792997ad360787e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a792997ad360787e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535002865174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "demo-subnet"
            },
            "tags_all": {
              "Name": "demo-subnet"
            },
            "vpc_id": "vpc-0c539d0abf40fe20b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535002865174",
            "id": "subnet-0a792997ad360787e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo-vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535002865174:vpc/vpc-0c539d0abf40fe20b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c79672f1b34d08a",
            "default_route_table_id": "rtb-02a072b177b45379c",
            "default_security_group_id": "sg-01978a9c7e69ee382",
            "dhcp_options_id": "dopt-054fa052a480af4a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c539d0abf40fe20b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a072b177b45379c",
            "owner_id": "535002865174",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "demo vpc"
            },
            "tags_all": {
              "Name": "demo vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535002865174",
            "id": "vpc-0c539d0abf40fe20b",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}